syntax = "proto3";

option csharp_namespace = "ProtoServer.ProtoFiles";

service AuthUseCase{
  rpc UserLogin(PLoginRequest) returns (PAuthToken){}
}

message PLoginRequest{
  string email = 1 ;
  string password = 2;
}

message PAuthToken{
  string token = 1;
}